examples/test/testpolicy2308.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2308
  namespace: namespace115
spec:
  podSelector:
    matchLabels:
      key35: value12
      key27: value39
      key26: value21
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key42: value33
          key4: value27
          key24: value46
      podSelector:
        matchLabels:
          key3: value31
